Експортовано функції pagination.js

--- a/src/pagination.html
+++ b/src/pagination.html
@@ -34,8 +34,7 @@
   </div>
 
 
-  <script type="module" src="./js/main.js"></script>
-  <script type="module" src="./js/pagination.js"></script>
+  <script type="module" src="./js/main.js" defer></script>
 </body>
 
 </html>
