--- a/src/extra-task.html
+++ b/src/extra-task.html
@@ -41,7 +41,7 @@
   </div>
 
   <script type="module" src="./js/main.js"></script>
-  <script type="module" src="./js/extra-task.js"></script>
+  <script src="./js/extra-task.js"></script>
 </body>
 
 </html>
