--- a/src/async-basics.html
+++ b/src/async-basics.html
@@ -28,15 +28,15 @@
   <div class="container">
     <h2>Fetch Number</h2>
     <div class="controls">
-        <label for="result-type">Виберіть результат:</label>
-        <select id="result-type">
-            <option value="success">Успіх</option>
-            <option value="error">Помилка</option>
-        </select>
-        <button id="fetch-button">Отримати число</button>
+      <label for="result-type">Виберіть результат:</label>
+      <select id="result-type">
+        <option value="success">Успіх</option>
+        <option value="error">Помилка</option>
+      </select>
+      <button id="fetch-button">Отримати число</button>
     </div>
     <div id="output" class="output"></div>
-</div>
+  </div>
 
 
   <h2>Консольний варіант виконання</h2>
@@ -63,7 +63,37 @@ async function main() {
 
 
   <script type="module" src="./js/main.js"></script>
-  <script type="module" src="./js/async-basics.js"></script>
+  <script>
+    function fetchNumber(shouldFail = false) {
+      return new Promise((resolve, reject) => {
+        setTimeout(() => {
+          if (shouldFail) {
+            reject(new Error('Не вдалося отримати число'));
+          } else {
+            resolve(9);
+          }
+        }, 2000);
+      });
+    }
+
+    async function getNumber(shouldFail = false) {
+      const outputElement = document.querySelector('#output');
+      outputElement.innerHTML = 'Зачекайте...';
+      try {
+        const number = await fetchNumber(shouldFail);
+        outputElement.innerHTML = `Отримане число: <strong>${number}</strong>`;
+      } catch (error) {
+        outputElement.innerHTML = `<span class="error">Помилка: ${error.message}</span>`;
+      }
+    }
+
+    const fetchButton = document.querySelector('#fetch-button');
+    fetchButton.addEventListener('click', () => {
+      const resultType = document.querySelector('#result-type').value;
+      const shouldFail = resultType === 'error';
+      getNumber(shouldFail);
+    });
+  </script>
 </body>
 
 </html>
